--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "portfolio-dojlido-react",
     "dependencies": {
+        "latest": "^0.2.0",
         "lodash": "^4.17.11",
         "react": "^15.5.4",
         "react-dom": "^15.5.4",
@@ -17,9 +18,9 @@
         "eslint": "^3.19.0",
         "eslint-config-airbnb": "^15.0.1",
         "eslint-loader": "^1.7.1",
-        "eslint-plugin-import": "^2.2.0",
+        "eslint-plugin-import": "^2.17.2",
         "eslint-plugin-jsx-a11y": "^5.0.1",
-        "eslint-plugin-react": "^7.0.1",
+        "eslint-plugin-react": "^7.13.0",
         "extract-text-webpack-plugin": "^2.1.0",
         "file-loader": "^0.11.2",
         "html-webpack-plugin": "^2.28.0",
@@ -30,7 +31,7 @@
         "react-dev-utils": "^1.0.0",
         "style-loader": "^0.17.0",
         "webpack": "^2.5.1",
-        "webpack-dev-server": "^2.4.5"
+        "webpack-dev-server": "^2.11.5"
     },
     "scripts": {
         "start": "node scripts/start.js",
