--- a/epam_workout_vol3_burger/package.json
+++ b/epam_workout_vol3_burger/package.json
@@ -11,8 +11,10 @@
     "@types/radium": "^0.24.2",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.2",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "axios": "^0.19.0",
@@ -57,6 +59,8 @@
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
