--- a/epam_workout_vol3_burger/package.json
+++ b/epam_workout_vol3_burger/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
