--- a/epam_workout_vol3_burger/package.json
+++ b/epam_workout_vol3_burger/package.json
@@ -28,6 +28,8 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
@@ -60,6 +62,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-test-render": "^1.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
