--- a/epam_workout_vol3_burger/package.json
+++ b/epam_workout_vol3_burger/package.json
@@ -65,6 +65,7 @@
     "react-redux": "^7.1.3",
     "react-test-render": "^1.1.2",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
