--- a/epam_workout_vol4_react_hooks/package.json
+++ b/epam_workout_vol4_react_hooks/package.json
@@ -6,15 +6,19 @@
     "@babel/core": "7.6.0",
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@svgr/webpack": "4.3.2",
+    "@testing-library/jest-dom": "^5.0.2",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/radium": "^0.24.2",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.2",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
@@ -25,6 +29,8 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
@@ -56,6 +62,11 @@
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-test-render": "^1.1.2",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
